src/test/run-pass/issue-10031.rs
// Copyright 2014 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

// ignore-fast - check-fast doesn't understand aux-build
// aux-build:issue_10031_aux.rs
extern crate issue_10031_aux;

pub fn main() {
    let _ = issue_10031_aux::Wrap(());
}
